[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hfix-engine"
version = "0.1.0"
description = "High performance FIX (Financial Information eXchange) protocol engine using Asyncio and Simplefix"
readme = "README.md"
authors = [{ name = "Hugo Nistal Gonzalez"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "feedparser >= 5.2.0",
    "html2text",
    'tomli; python_version < "3.11"',
    "simplefix>=1.0.15",
    "aiolimiter>=1.0.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/HNGlez/hfix-engine"
